videodecoder: fix inappropriate compiler optimization hint macro usage

https://bugzilla.gnome.org/show_bug.cgi?id=679456